extension/styles.css
.row,
body,
html,
.search {
  background-color: #212121 !important;
  color: #ddd !important;
  border-color: #212121;
  border-radius: 5px !important;
}

#react-app-bible {
  background-color: #212121;
}

a,
a.header,
a.fp-link {
  color: #6ab750;
}

::selection {
  background: #6ab750;
  color: #212121;
}

.yv-bible-text .wj .content::selection {
  color: #cc0000;
}

/*****

Bootstrap overrides

*****/

.bg-white {
  background-color: #212121;
}

.bg-light-gray {
  background-color: #424242;
}

.black-30 {
  color: #888888;
}

.black-50 {
  color: #999;
}

.black-80 {
  color: #ddd;
}

.mid-gray {
  color: #ddd;
}

/*****

Welcome Page

*****/

h1.heading a.heading {
  color: #ddd;
}

div.columns h2.heading {
  color: #ddd;
}

div.columns p.body-text {
  color: #ddd;
}

/*****
Search
*****/

.search svg {
  background-color: #212121 !important;
}

.searchicon-container + * > input {
  background: transparent !important;
}

.search .search-input {
  margin: 2px !important;
}

.centered {
  border: none !important;
  /* border-radius: 2px !important; */
}

div.search.vertical-center {
  border: none;
}

.searchicon-container > g {
  fill: #ddd !important;
}

path#search-black {
  fill: #ddd;
}

/* Sign in buttons */

.yv-button {
  background-color: #424242 !important;
  border-color: #ddd !important;
  color: #ddd !important;
}

.yv-icon-button-svg > svg > path,
.yv-icon-button-label > span,
.yv-icon-button-svg g[fill='#a2a2a2'],
.yv-icon-button-svg g path[fill='#a2a2a2'] {
  fill: #ddd;
  color: #ddd;
}

.reader-header,
input,
textarea,
.yv-sticky-header-content {
  background-color: #424242 !important;
  color: #ddd !important;
  border: none !important;
}

input {
  background-color: rgba(255, 255, 255, 0.2) !important;
}

.circle-buttons {
  background-color: #424242 !important;
  border: none !important;
}

.picker-label {
  border-color: #646464 !important;
}

.dropdown-arrow > polygon {
  fill: #ddd !important;
}

.open.dropdown-arrow-container {
  border-radius: 5px 5px 0 0 !important;
}

.header {
  background-color: #212121 !important;
  border: 2px solid #424242 !important;
}

.chapter-picker-modal {
  background-color: #212121 !important;
  border: 2px solid #424242 !important;
}

.chapter-picker-modal .chapter-container {
  border-color: #424242 !important;
}

.chapter-picker-modal .chapter-container .chapter-list li {
  background: none !important;
  border: 2px solid #424242 !important;
}

.chapter-picker-modal .chapter-container .chapter-list li.active {
  background-color: #424242 !important;
}

.audio-popup .audio-popup-modal .body,
.reader-settings .reader-settings-modal .body {
  background-color: #212121 !important;
}

.audio-player h3 {
  color: #ddd !important;
}

.book-list .focus,
.book-list li:hover,
.chapter-list .focus,
.chapter-list li:hover {
  background-color: #424242 !important;
}

/*****

Verse action footer

*****/
div.verse-action-footer {
  background-color: #616161;
}

a.close-button.yv-gray-link {
  color: #ddd;
}

a.close-button.yv-gray-link:hover {
  color: #6ab750;
}

.verse-action-footer.open {
  background-color: #646464 !important;
  border: none !important;
}

.version-picker-modal {
  border: 2px solid #424242 !important;
}

.version-picker-modal .header {
  border-left: 0 !important;
  border-right: 0 !important;
}

.version-picker-modal .version-container {
  border: none !important;
}
.version-picker-modal .language-list,
.version-picker-modal .version-list {
  background-color: #212121 !important;
}

.version-picker-modal .language-list li,
.version-picker-modal .version-list li {
  color: #ddd !important;
}

.version-picker-modal .language-list .focus,
.version-picker-modal .language-list li:hover,
.version-picker-modal .version-list .focus,
.version-picker-modal .version-list li:hover {
  background-color: #424242 !important;
}

.version-picker-modal .language-list .language-header,
.version-picker-modal .language-list .version-header,
.version-picker-modal .version-list .language-header,
.version-picker-modal .version-list .version-header {
  color: #ddd !important;
}

.version-picker-modal .language-list ul,
.version-picker-modal .version-list ul {
  background-color: #212121 !important;
}

.change-language {
  background-color: #212121 !important;
  border-bottom: 2px solid #424242 !important;
}

.yv-button-bar-button {
  background-color: #424242 !important;
}

ul.button-group.primary-toggle li.inactive a.solid-button.green {
  background-color: #212121 !important;
}

div.carousel-title .title-container {
  color: #ddd;
}

#react-app-PlanDiscovery > div {
  background-color: #212121;
}

.slide-title,
.title {
  color: #ddd !important;
}

.collection-title {
  color: #ddd !important;
}

.moment {
  border-radius: 5px !important;
}

.moment-top,
.moment-content,
.moment-actions {
  background: #424242 !important;
  color: #ddd !important;
}

.moment-bottom {
  background-color: #212121 !important;
}

.moment-comments-self-box {
  background-color: #424242 !important;
}

.hollow-button.gray,
button.hollow-button.gray,
input[type='submit'].hollow-button.gray {
  background-color: transparent !important;
}

.moment-comments-self-input textarea {
  background-color: transparent !important;
  color: #ddd !important;
}

.yv-inbox-wrapper.yv-notifications-inbox {
  background-color: #212121 !important;
  border: 2px solid #646464 !important;
  border-radius: 5px;
}

.yv-notification {
  background-color: #212121 !important;
  border-bottom: 1px solid #ddd !important;
}

.subscription-actions span,
.plan-saved-title,
.plan-completed-title {
  color: #ddd !important;
}

.flex-wrap.horizontal-center.option span {
  color: 424242;
}

/*****

  Plans

*****/

.plan-title,
.featured-plans-row .fp-title a {
  color: #ddd !important;
}

.plan-overview .header {
  border: 0 !important;
}

ul.plan-pieces li,
.plan-pieces li span,
.plan-pieces li a {
  color: #ddd !important;
}

.plan-day-slider button.slick-next.slick-arrow,
.plan-day-slider button.slick-prev.slick-arrow {
  border-left: 8px solid #646464 !important;
}

.plan-day-slider .day {
  background-color: #424242 !important;
  border: none !important;
}

.plan-day-slider .slick-list {
  border: 2px solid #646464 !important;
  border-radius: 5px !important;
}

.plan-day-slider .day h1,
.plan-day-slider .day h4 {
  color: #ddd !important;
}

.day-bottom h4 div {
  background-color: #ddd !important;
  border-color: #ddd !important;
}

.devo-content {
  color: #ddd;
}

.plan-nav-header {
  background-color: #424242 !important;
  border: 0 !important;
}

.nav-content .plan-info .nav-title {
  color: #ddd !important;
}

button.chapter-button {
  background-color: #424242 !important;
  border: 2px solid #646464 !important;
  color: #ddd !important;
}

.plan-reader-content > div.centered {
  border: 0 !important;
}

/*

Bookmarks page

*/

div.yv-fullscreen-modal-content,
div.verse-action-create {
  background-color: #212121;
}

div.card {
  background-color: #424242;
  border: 2px solid #646464;
}

span.verse,
.verse h2.heading {
  color: #ddd;
}

div.labels-modal {
  background-color: #212121;
  border: 2px solid #646464;
  border-radius: 5px;
}

svg.slick-arrow-right > path,
svg.slick-arrow-left > path {
  fill: #ddd;
}

/*

Verse Page (Search results)

*/

div.gray-background {
  background-color: #212121;
}

h1.css-1jofwea {
  color: #ddd;
}

h3.css-xu7krs,
h3.css-xu7krs span,
h3.css-xu7krs a[target='_self'] {
  color: #ddd;
}

.trigger > svg > path,
.yv-footer-child > a > svg > g {
  fill: #ddd;
}

